--- a/login.html
+++ b/login.html
@@ -11,6 +11,16 @@
 
 </head>
 <body>
+
+<div class="container">
+<div class="login-wrapper">
+
+    <footer class="mt-3 pt-3 border-top border-secondary">
+        <p class="text-muted">If you click "Login with Facebook" and are not a Spotify user, you will be registered and you agree to Spotify's <span class="light-green-text">Terms & Conditions</span> and <span class="light-green-text">Privacy Policy</span></p>
+    </footer>
+    
+</div>
+</div>
     
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
