--- a/login.html
+++ b/login.html
@@ -15,6 +15,13 @@
   </head>
 
   <body>
+    <div class="container-fluid">
+      <div class="row border-bottom border-secondary">
+        <div class="text-center col-12">
+          <img  class="login-logo" width="130" height="70" src="./assets/logo.jpg" alt="">
+        </div>
+      </div>
+    </div>
     <div class="container d-flex w-40 justify-content-center">
       <div class="row text-center mt-0">
         <div class="col-xs-12 d-flex">
