--- a/login.html
+++ b/login.html
@@ -20,10 +20,10 @@
         <div class="col-xs-12 d-flex">
           <h2>Don't have an account?</h2>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 d-flex">
-          <a href=""><button>SING UP FOR SPOTIFY</button></a>
+        <div class="row">
+            <div class="col-xs-12 d-flex">
+                <button  class="login-input-submit-btn ">SIGN UP FOR SPOTIFY</button>
+            </div>
         </div>
       </div>
     </div>
