--- a/login.html
+++ b/login.html
@@ -16,12 +16,12 @@
 
   <body>
     <div class="container d-flex w-40 justify-content-center">
-      <div class="row text-center mt-0">
+      <div class="row text-center mt-1">
         <div class="col-xs-12 d-flex">
-          <h2>Don't have an account?</h2>
+          <h5>Don't have an account?</h2>
         </div>
         <div class="row">
-            <div class="col-xs-12 d-flex">
+            <div class="col-xs-12">
                 <button  class="login-input-submit-btn ">SIGN UP FOR SPOTIFY</button>
             </div>
         </div>
