--- a/login.html
+++ b/login.html
@@ -20,9 +20,9 @@
         <div class="col-xs-12 d-flex">
           <h5>Don't have an account?</h2>
         </div>
-        <div class="row">
+        
             <div class="col-xs-12">
-                <button  class="login-input-submit-btn ">SIGN UP FOR SPOTIFY</button>
+                <button  class="btn-signup">SIGN UP FOR SPOTIFY</button>
             </div>
         </div>
       </div>
