--- a/login.html
+++ b/login.html
@@ -17,11 +17,11 @@
   <body>
     <div class="container d-flex w-40 justify-content-center">
       <div class="row text-center mt-1">
-        <div class="col-xs-12 d-flex">
-          <h5>Don't have an account?</h2>
+        <div class="col-12">
+          <h6>Don't have an account?</h2>
         </div>
         
-            <div class="col-xs-12">
+            <div class="col-12">
                 <button  class="btn-signup">SIGN UP FOR SPOTIFY</button>
             </div>
         </div>
