--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         <div class="content ">
             <div class="row text-center ml-4 mb-3">
                 <div class="col-xs-12">
-                    <h1 class="h5 ">To continue, login To Spotify</h1>
+                    <h1 class="h5 "><strong> To continue, login To Spotify</strong></h1>
                 </div>
 
             </div>
