--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <div class="col-xs-12">
                     <h1 class="h5 "><strong> To continue, login To Spotify</strong></h1>
                 </div>
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, necessitatibus quae harum pariatur voluptatum, esse, repellat cupiditate reprehenderit nihil quisquam ipsum quasi obcaecati impedit corporis quod. Dolorum beatae culpa amet.</p>
             </div>
             <div class="row">
                 <div class="col-xs-12 mb-3">
