--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
         <div class="divider">
             <strong class="divider-title">OR</strong>
         </div>
-        <form id = "login-input-form">
+        <form id = "login-input-form" class="text-left">
             <label for="username">Email address or username</label>
             <input class="login-input-fields"  type="text" placeholder="Email address or username" name="username">
 
