--- a/albums/albums.html
+++ b/albums/albums.html
@@ -20,6 +20,7 @@
                 
                 <!-- ALI'S CODE GOES HERE -->
                 <!-- SIDEBAR GOES INSIDE THIS C0L-2 -->
+                <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
                 <div class="col-2">
                     <p>Sidebar</p>
                 </div>
@@ -27,6 +28,7 @@
 
                 <!-- PIOTR/HASAN/JAVOKHIR CODE GOES HERE-->
                 <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
+                <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
                 <div class="col-10">
                     <div class="row">
 
@@ -52,6 +54,7 @@
 
     <!-- FRANCESCO -->
     <!-- MUSIC CONTROLS GOE INSIDE COL-12 -->
+    <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
     <div class="row">
         <div class="col-12">
             <p>ndjsndasnd</p>
