--- a/albums/albums.html
+++ b/albums/albums.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spotify Clone</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<link rel="stylesheet" href="../style.css">
 <link rel="stylesheet" href="album-style.css">
 
 </head>
@@ -26,12 +27,23 @@
                 </div>
                 <!-- SIDEBAR ENDS HERE -->
 
-                <!-- PIOTR/HASAN/JAVOKHIR CODE GOES HERE-->
-                <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
-                <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
-                <div class="col-10">
-                    <div class="row">
 
+
+                <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
+                <div class="col-10">
+
+                    <div class="row">
+                        <div class="col-12">
+                            <!-- JAVOKHIR -->
+                            <!-- ALBUM HEADER SECTION GOES HERE -->
+                            <p>Album Header Section</p>
+                        </div>
+                    </div>
+                    
+
+                    <!-- HASAN -->
+                    <div class="row">
+                    
                         <div class="col-1">
                             <p>1</p>
                         </div>
@@ -52,12 +64,14 @@
         </div>
     </div>
 
+
+
     <!-- FRANCESCO -->
     <!-- MUSIC CONTROLS GOE INSIDE COL-12 -->
     <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
     <div class="row">
         <div class="col-12">
-            <p>ndjsndasnd</p>
+            <p>Music Controls</p>
         </div>
     </div>
 
