Positions Music Control Fixed to Bottom

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -80,7 +80,7 @@
     <!-- FRANCESCO -->
     <!-- MUSIC CONTROLS GOE INSIDE COL-12 -->
     <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
-    <div class="row">
+    <div class="row music-controls-section">
         <div class="col-12">
             <p>Music Controls</p>
         </div>
