--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <!-- FRANCESCO -->
         <!-- MUSIC CONTROLS GOE INSIDE COL-12 -->
         <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
-        <div class="row  hp-footer hp-footer-bg">
-            <div class="col-12 d-inline-flex hp-footer-text px-0">
+        <div class="row fixed-bottom hp-footer hp-footer-bg">
+            <div class="col-12 d-inline-flex hp-footer-text px-4">
                 <!-- ================   Footer left side  =================-->
                 <!-- ===================================================== -->
                 <div class="container d-inline-block hp-footer-left-section ml-0 mr-1 pr-2">
@@ -78,11 +78,16 @@
                 <!-- ================  Footer center side  =================-->
                 <div class="container d-inline-block hp-footer-center-section ml-2 mr-1 mt-3 px-2">
                     <div class="d-flex flex-column hp-footer-center-side pt-4">
-                        <div class="d-flex justify-content-center hp-footer-center-gap">
+                        <div class="d-flex justify-content-center hp-footer-center-gap pb-2">
                             <img src="assets/shuffle.png" alt="shuffle" class="hp-footer-center-img">
-                            <img src="/assets/backward.png" alt="" class="hp-footer-center-img">
-                            <img src="assets/play.png" alt="" class="hp-footer-center-img">
+                            <img src="/assets/forward.png" alt="" class="hp-footer-center-img rotate">
+
+                            <div class="circle">
+                                <div class="triangle"></div>
+                            </div>
+
                             <img src="/assets/forward.png" alt="" class="hp-footer-center-img">
+
                             <img src="/assets/repeatall.png" alt="" class="hp-footer-center-img">
                         </div>
                         <div class="d-flex justify-content-center">
