Added Footer to all pages with styles and images

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -113,19 +113,19 @@
             <div class="container d-inline-block hp-footer-center-section ml-2 mr-1 mt-3 px-2">
                 <div class="d-flex flex-column hp-footer-center-side pt-4">
                     <div class="d-flex justify-content-center hp-footer-center-gap pb-2">
-                        <img src="assets/shuffle.png" alt="shuffle" class="hp-footer-center-img">
-                        <img src="/assets/forward.png" alt="" class="hp-footer-center-img rotate">
+                        <img src="../assets/shuffle.png" alt="shuffle" class="hp-footer-center-img">
+                        <img src="../assets/forward.png" alt="" class="hp-footer-center-img rotate">
 
                         <div class="circle">
                             <div class="triangle"></div>
                         </div>
 
-                        <img src="/assets/forward.png" alt="" class="hp-footer-center-img">
+                        <img src="../assets/forward.png" alt="" class="hp-footer-center-img">
 
-                        <img src="/assets/repeatall.png" alt="" class="hp-footer-center-img">
+                        <img src="../assets/repeatall.png" alt="" class="hp-footer-center-img">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <img src="assets/counterslider.png" alt="shuffle">
+                        <img src="../assets/counterslider.png" alt="shuffle">
                     </div>
                 </div>
             </div>
@@ -135,9 +135,9 @@
             <!-- ================== Footer right side ========================-->
             <div class="container d-inline-block hp-footer-end-section ml-2 mr-1 mt-3 px-2">
                 <div class="d-flex justify-content-end hp-footer-end-side pt-4">
-                    <img src="assets/list.png" alt="shuffle" class="hp-footer-center-img mr-2">
-                    <img src="/assets/speaker.png" alt="" class="hp-footer-center-img mr-2">
-                    <img src="assets/volume.png" alt="" class="hp-footer-center-img mr-2">
+                    <img src="../assets/list.png" alt="shuffle" class="hp-footer-center-img mr-2">
+                    <img src="../assets/speaker.png" alt="" class="hp-footer-center-img mr-2">
+                    <img src="../assets/volume.png" alt="" class="hp-footer-center-img mr-2">
                     <div class="bordered mt-2"></div>
                 </div>
             </div>
