--- a/artists/artists.html
+++ b/artists/artists.html
@@ -22,7 +22,31 @@
                     <!-- SIDEBAR GOES INSIDE THIS C0L-2 -->
                     <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
                     <div class="col-2">
-                        <p>Sidebar</p>
+                        <div class="row">
+                            <div class="side-bar col-12 text-light">
+                              <img  class="text-left" src="../assets/spotlogo.jpg" width="180" height="65" alt="sidebar-logo">
+                              <button type="button" class="text-left btn btn-secondary mb-3"><i class="bi bi-house-door"></i>Home</button>
+                              <p class="ali text-muted"><i class="bi bi-search"> </i>Search</p>
+                              <p class="text-muted"><i class="bi bi-collection-play"> </i>Your Library</p><br><br>
+                              <p class="text-muted"><i class="bi bi-plus-square-dotted"> </i>Create Playlist</p>
+                              <p class="text-muted"><i class="bi bi-heart-fill"> </i>Liked Songs</p>
+                              <hr class="border-secondary">
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy</p>
+                              <p>Funky Heavy Bluesy<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                              <p>Funky Heavy Bluesy<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                              <p>Funky Heavy Bluesys</p>
+                              <p>Funky Heavy Bluesys</p>
+                              <p>Funky Heavy Bluesys</p>
+                              <p>Funky Heavy Bluesys</p>
+                              <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
+                            </div>
+                          </div>
                     </div>
                     <!-- SIDEBAR ENDS HERE -->
 
