added image to header

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -58,11 +58,21 @@
                 <div class="col-10">
 
                     <div class="row">
-                        <div class="col-12">
-                            <!-- JAVOKHIR -->
-                            <!-- ALBUM HEADER SECTION GOES HERE -->
-                            <p>Album Header Section</p>
-                        </div>
+                            <div class="col-12">
+                              <div class="header-buttons">
+                                <button type="button" class="btn-1 text-light btn"><strong><</strong></button>
+                                <button type="button" class="btn-2 text-light btn"><strong>></strong></button>
+                                <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified">
+                                <p>QUEEN</p>
+                                <p class="text-muted">37,120,733 monthly listeners</p>
+                                <div class="dropdown">
+                                  <button class="btn btn-dark bg-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Dropdown button
+                                  </button>
+                                </div>
+                              </div>
+                              <img class="album-picture" src="../assets/queen1.jpg" alt="album-picture">
+                            </div>
                     </div>
 
                     <!-- HASAN -->
