--- a/albums/albums.html
+++ b/albums/albums.html
@@ -27,7 +27,7 @@
                     <div class="row">
                         <div class="side-bar col-12 text-light">
                           <img  class="text-left" src="../assets/spotlogo.jpg" width="180" height="65" alt="sidebar-logo">
-                          <button type="button" class="text-left btn btn-secondary mb-3"><i class="bi bi-house-door"></i>Home</button>
+                          <button type="button" class="text-left btn btn-secondary mb-3 w-100"><i class="bi bi-house-door"></i>Home</button>
                           <p class="ali text-muted"><i class="bi bi-search"> </i>Search</p>
                           <p class="text-muted"><i class="bi bi-collection-play"> </i>Your Library</p><br><br>
                           <p class="text-muted"><i class="bi bi-plus-square-dotted"> </i>Create Playlist</p>
@@ -59,6 +59,7 @@
 
                     <div class="row">
                             <div class="col-12">
+                                <div class="album-top-bg-image">
                                 <div class="d-flex justify-content-between">
                                     <div class="d-flex mb-3">
                                         <div class="d-flex hp-hero-top circle-top mr-3">
@@ -85,18 +86,13 @@
                                             </div>
                                         </div>
 
-
-
-
-
                                     </div>
 
-
-
-
-
                                 </div>
-                              <img class="album-picture" src="../assets/queen1.jpg" alt="album-picture">
+
+                                
+
+                            </div>
                             </div>
                     </div>
 
