--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div class="row">
                             <div class="side-bar col-12 text-light">
                               <img  class="text-left" src="../assets/spotlogo.jpg" width="180" height="65" alt="sidebar-logo">
-                              <button type="button" class="text-left btn btn-secondary mb-3"><i class="bi bi-house-door"></i>Home</button>
+                              <button type="button" class="text-left btn btn-secondary mb-3 w-100"><i class="bi bi-house-door"></i>Home</button>
                               <p class="ali text-muted"><i class="bi bi-search"> </i>Search</p>
                               <p class="text-muted"><i class="bi bi-collection-play"> </i>Your Library</p><br><br>
                               <p class="text-muted"><i class="bi bi-plus-square-dotted"> </i>Create Playlist</p>
