added fix positioning infos

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -57,7 +57,7 @@
                 <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
                 <div class="col-10">
 
-                    <div class="row">
+                    <div class="row album-img-container">
                             <div class="col-12">
                                 <div class="album-top-bg-image">
                                 <div class="d-flex justify-content-between">
@@ -90,7 +90,11 @@
 
                                 </div>
 
-                                
+                                <div class="album-info">
+                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified">
+                                    <p>QUEEN</p>
+                                    <p class="text-muted">37,120,733 monthly listeners</p>  
+                                </div>
 
                             </div>
                             </div>
