added font size

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -91,9 +91,9 @@
                                 </div>
 
                                 <div class="album-info">
-                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified">
-                                    <p>QUEEN</p>
-                                    <p class="text-muted">37,120,733 monthly listeners</p>  
+                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified" <h6>Verified Artist</h6>
+                                    <p><strong>Queen</strong></p>
+                                    <p>37,120,733 monthly listeners</p>  
                                 </div>
 
                             </div>
