--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
                               <p>In Love With You-Erykah B..</p>
                               <p>This is road Stewart</p>
                               <p>FRANCHISE ft.Young Thig...</p>
-                              <p>Funky Heavy Bluesy</p>
-                              <p>Funky Heavy Bluesy</p>
-                              <p>Funky Heavy Bluesy<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                              <p>Funky Heavy Bluesy<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
-                              <p>Funky Heavy Bluesys</p>
-                              <p>Funky Heavy Bluesys</p>
-                              <p>Funky Heavy Bluesys</p>
-                              <p>Funky Heavy Bluesys</p>
+                              <p>Your Top Songs 2019</p>
+                              <p>Pallegio</p>
+                              <p>This is Joe Bonamassa<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                              <p>June 2019<i class="ml-5 text-right bi bi-person-lines-fill"></i></p>
+                              <p>Jack 30th Party 2</p>
+                              <p>Jack 30th Party</p>
+                              <p>This is Opeth</p>
+                              <p>Metal Ballades</p>
+                              <p>New Playlist</p>
+                              <p>Your Top Songs 2018</p>
+                              <p>Jazz Classics Blue Note...</p>
                               <p class="text-muted"><i class="bi bi-arrow-down-circle"> </i>Install app</p>
                             </div>
                           </div>
