switch ing branches2

--- a/artists/artists.html
+++ b/artists/artists.html
@@ -93,13 +93,13 @@
                             <div class="col-3">
                                 <h3>Artist Pick</h3>
 
-                                <div class="row">
+                                <div class="row d-flex justify-content-center">
 
-                                    <div class="col-3">
+                                    <div class="col-12 col-xl-3">
                                         <img class="artist-pick-img" src="../assets/cards/7.jpg" alt="">
                                     </div>
 
-                                    <div class="col-9">
+                                    <div class="col-12 col-xl-9">
                                         <div class="d-flex posted-by">
                                             <img src="../assets/cards/8.jpg" class="mr-2" alt="">
                                             <p class="light-gray-text smaller-text font-weight-bold mb-1">Posted By Queen</p>
