--- a/albums/albums.html
+++ b/albums/albums.html
@@ -58,7 +58,7 @@
 
 
                 <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
-                <div class="col-10">
+                <div class="col-10 p-0">
 
                     <!-- Album header -->
                     <div id="album-header-container">
