--- a/albums/albums.html
+++ b/albums/albums.html
@@ -60,49 +60,50 @@
                 <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
                 <div class="col-10">
 
-                    <div class="row album-img-container">
-                            <div class="col-12">
-                                <div class="album-top-bg-image">
-                                <div class="d-flex justify-content-between">
-                                    <div class="d-flex mb-3">
-                                        <div class="d-flex hp-hero-top circle-top mr-3">
-                                            <div class="triangle-top-l"></div>
-                                        </div>
-                                        <div class="d-flex hp-hero-top circle-top">
-                                            <div class="triangle-top-r"></div>
-                                        </div>
-                                    </div>
-
-
-
-                                    <div class="account">
-                                        <!-- Small button groups (default and split) -->
-                                        <div class="btn-group">
-                                            <button class="btn btn-sm bg-black dropdown-toggle rounded-pill" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-</svg> Your Name
-  </button>
-                                            <div class="dropdown-menu">
-                                                ...
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-                                </div>
-
-                                <div class="album-info">
-                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified" <h6>Verified Artist</h6>
-                                    <p><strong>Queen</strong></p>
-                                    <p>37,120,733 monthly listeners</p>  
-                                </div>
+                     <!-- Album header -->
+                     <div id="album-header-container">
+                        <div class="album-content">
+                            <div class="album-img">
+                                <!-- <img src="../assets/cards/52.jpg" alt="" srcset=""> -->
+                            </div>
+                            <div class="album-content-text">
 
                             </div>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex mb-3">
+                                <div class="d-flex hp-hero-top circle-top mr-3">
+                                    <div class="triangle-top-l"></div>
+                                </div>
+                                <div class="d-flex hp-hero-top circle-top">
+                                    <div class="triangle-top-r"></div>
+                                </div>
                             </div>
+
+
+
+                            <div class="account">
+                                <!-- Small button groups (default and split) -->
+                                <div class="btn-group">
+                                    <button class="btn btn-sm bg-black dropdown-toggle rounded-pill" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                                        </svg> Your Name
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        ...
+                                    </div>
+                                </div>
+
+
+
+                            </div>
+
+                        </div>
                     </div>
-
+                    <!--/ Album header -->
                     <!-- HASAN -->
                     <div id="album-songs-container" class="bg-wrapper px-4">
                         <div class="row my-3">
