Minor padding removed

--- a/artists/artists.html
+++ b/artists/artists.html
@@ -56,7 +56,7 @@
 
     
                     <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
-                    <div class="col-10 w-100">
+                    <div class="col-10 w-100 p-0">
                         <div class="row">
                                 <div class="col-12">
                                     <!-- JAVOKHIR -->
@@ -110,7 +110,7 @@
                         </div>
 
                         <div class="bg-wrapper">
-                        <div class="row my-3 px-2">
+                        <div class="row my-3 p-0">
                             <div class="col-12 album-action-icons d-flex align-items-center">
                                 <i class="bi bi-pause-circle-fill"></i>
                                 <span class="follow-btn rounded">FOLLOW</span>
