Sidebar made responsive

--- a/artists/artists.html
+++ b/artists/artists.html
@@ -22,7 +22,7 @@
                     <!-- ALI'S CODE GOES HERE -->
                     <!-- SIDEBAR GOES INSIDE THIS C0L-2 -->
                     <!-- YOU WILL NEED TO CREAT A NEW COL- FOR HOWEVER BIG YOU WANT, CAN GO UPTO COL-12 -->
-                    <div class="col-2">
+                    <div class="col-2 d-none d-lg-block">
                         <div class="row">
                             <div class="side-bar col-12 text-light">
                                 <img  class="text-left" src="../assets/spotlogo.jpg" width="180" height="65" alt="sidebar-logo">
@@ -56,7 +56,7 @@
 
     
                     <!-- REMAINING PAGE CONTENT GOES INSIDE COL-10 -->
-                    <div class="col-10 w-100 p-0">
+                    <div class="col-12 w-100 p-0 col-lg-10">
                         <div class="row">
                                 <div class="col-12">
                                     <!-- JAVOKHIR -->
