--- a/artists/artists.html
+++ b/artists/artists.html
@@ -26,11 +26,11 @@
                         <div class="row">
                             <div class="side-bar col-12 text-light">
                                 <a href="../index.html"><img class="text-left" src="../assets/spotlogo.jpg" width="180" height="65" alt="sidebar-logo"></a>
-                                <a href="../index.html"><button type="button" class="text-left btn btn-secondary mb-3 w-100"><i class="bi bi-house-door"></i>Home</button></a>
+                                <a href="../index.html"><p class="text-muted sidebar-links"><i class="bi bi-house-door"> </i>Home</p></a>
                                 <p class="ali text-muted"><i class="bi bi-search"> </i>Search</p>
                                 <p class="text-muted"><i class="bi bi-collection-play"> </i>Your Library</p>
                                 <a href="../albums/albums.html"><p class="text-muted sidebar-links"><i class="bi bi-vinyl"> </i>Albums</p></a>
-                                <a href="artists.html"><p class="text-muted sidebar-links"><i class="bi bi-music-note-beamed"> </i>Artists</p></a>
+                                <a href="artists.html"><button type="button" class="text-left btn btn-secondary mb-3 w-100"><i class="bi bi-music-note-beamed"></i>Artists</button></a>
                                 <p class="text-muted"><i class="bi bi-plus-square-dotted"> </i>Create Playlist</p>
                                 <p class="text-muted"><i class="bi bi-heart-fill"> </i>Liked Songs</p>
                                 <hr class="border-secondary">
