--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                     </div>
                                 </div>
                                 <h3>Good morning</h3>
-                                <div class="d-flex flex-wrap justify-content-between mt-4">
-                                    <div class="hp-card mb-4 ">
+                                <div class="d-flex flex-wrap  mt-4">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
@@ -102,7 +102,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/10.jpg " width="70px" height="70px" alt="... ">
@@ -112,7 +112,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/11.jpg " width="70px" height="70px" alt="... ">
@@ -122,7 +122,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/12.jpg " width="70px" height="70px" alt="... ">
@@ -132,7 +132,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex ">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/13.jpg " width="70px" height="70px" alt="... ">
@@ -142,7 +142,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/14.jpg " width="70px" height="70px" alt="... ">
@@ -152,7 +152,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/15.jpg " width="70px" height="70px" alt="... ">
@@ -162,7 +162,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/16.jpg " width="70px" height="70px" alt="... ">
@@ -172,7 +172,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/17.jpg " width="70px" height="70px" alt="... ">
@@ -182,7 +182,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hp-card mb-4 ">
+                                    <div class="hp-card mb-4 col-12 col-xs-6 col-md-4 col-lg-3  ">
                                         <div class="d-flex">
                                             <div class="hp-card-img">
                                                 <img src="/assets/cards/18.jpg " width="70px" height="70px" alt="... ">
@@ -209,58 +209,58 @@
                                 </div>
 
 
-                                <div class="d-flex justify-content-between mx-2">
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/48.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                <div class="row  mx-2">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/48.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/35.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/35.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/46.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/46.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/40.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/40.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/41.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/41.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/49.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/49.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/51.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/51.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
                                         </div>
                                     </div>
-                                    <div class="card hp-subhero-card">
-                                        <img src="/assets/cards/52.jpg" width="100px" class="card-img-top px-2 pt-2" alt="...">
+                                    <div class="card hp-subhero-card col-12 col-sm-6 col-md-4 col-lg-3">
+                                        <img src="/assets/cards/52.jpg"  class="card-img-top px-2 pt-2 img-fluid" alt="...">
                                         <div class="card-body">
                                             <p class="hp-subhero-title">Purple Rain</p>
                                             <p class="hp-subhero-subtitle">Another song from my soul</p>
