Added Basic Theme Toggle

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                                 <p>Liked Songs</p>
                             </a> 
                             
+                            <button class="btn btn-dark" id="toggle-theme">Toggle Theme</button>
+
                             <hr class="border-secondary">
                             <p>Funky Heavy Bluesy</p>
                             <p>Your Top songs 2020</p>
@@ -428,6 +430,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
 
