--- a/albums/albums.html
+++ b/albums/albums.html
@@ -163,11 +163,11 @@
 
                         </div>
 
-                        <div class="album-content px-4">
-                            <div class="album-img">
-                                <img class="img-fluid" src="../assets/cards/52.jpg" alt="" srcset="">
+                        <div class="album-content row px-4">
+                            <div class="album-img col-12 col-md-2">
+                                <img  src="../assets/cards/52.jpg" alt="" srcset="">
                             </div>
-                            <div class="album-content-text mx-3">
+                            <div class="album-content-text col-12 col-md-8 mx-3">
                                 <p class="album-badge">ALBUM</p>
                                 <h3 class="album-title">Bohemian Rhapsody (The Original Soundtrack)</h3>
                                 <div class="album-mini-info">
