--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <h3>Good morning</h3>
                             <div class="d-flex flex-wrap  mt-4">
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -170,7 +170,7 @@
                                 </div>
 
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/10.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -180,7 +180,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/11.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/12.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -200,7 +200,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex ">
+                                    <div class="d-flex hp-card-img-wrapper ">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/13.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -210,7 +210,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/14.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -220,7 +220,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/15.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -230,7 +230,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/16.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -240,7 +240,7 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/17.jpg " width="70px" height="70px" alt="... ">
                                         </div>
@@ -250,9 +250,29 @@
                                     </div>
                                 </div>
                                 <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
-                                    <div class="d-flex">
+                                    <div class="d-flex hp-card-img-wrapper">
                                         <div class="hp-card-img">
                                             <img src="/assets/cards/18.jpg " width="70px" height="70px" alt="... ">
+                                        </div>
+                                        <div class="ml-3 mt-4">
+                                            <h5 class="hp-card-title">Card title</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
+                                    <div class="d-flex hp-card-img-wrapper">
+                                        <div class="hp-card-img">
+                                            <img src="/assets/cards/19.jpg " width="70px" height="70px" alt="... ">
+                                        </div>
+                                        <div class="ml-3 mt-4">
+                                            <h5 class="hp-card-title">Card title</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="hp-card mb-4 col-12 col-sm-6 col-md-4 col-lg-3">
+                                    <div class="d-flex hp-card-img-wrapper">
+                                        <div class="hp-card-img">
+                                            <img src="/assets/cards/20.jpg " width="70px" height="70px" alt="... ">
                                         </div>
                                         <div class="ml-3 mt-4">
                                             <h5 class="hp-card-title">Card title</h5>
