--- a/profile/profile.html
+++ b/profile/profile.html
@@ -126,7 +126,45 @@
                    <div class="col-10">
 
                        <div class="row">
-                           <!-- ALI CODE GOES HERE -->
+                    
+                        <div class="col-10 d-flex flex-row">
+                            <div class="col-2">
+                              <img src="../assets/profile.jpg.jpg" class="rounded-circle profile-picture img-fluid" alt="">
+                            </div>
+                            <div class="label-name col-3 d-flex flex-column">
+                              <label for="name" class="text-light">Name: Ali</label>
+                              <div class="input-group flex-nowrap">
+                                <div class="input-group-prepend">
+                                </div>
+                                <input type="text" class="form-control" placeholder="Enter your name" aria-label="name" aria-describedby="addon-wrapping" required>
+                              </div>
+                              <button type="button" class="add-name btn btn-success">Edit name</button>
+                              <label for="password" class="mt-5 text-light">Password: *********</label>
+                              <div class="input-group flex-nowrap">
+                                <div class="input-group-prepend">
+                                </div>
+                                <input type="password" class="form-control" placeholder="Enter your password" aria-label="Username" aria-describedby="addon-wrapping">
+                              </div>
+                              <button type="button" class="mt-2 add-password btn btn-success">Edit password</button>
+                            </div>
+                            <div class="label-name col-3 d-flex flex-column">
+                              <label for="email" class="text-light">Email: James1999007@gmail.com</label>
+                              <div class="input-group flex-nowrap">
+                                <div class="input-group-prepend">
+                                </div>
+                                <input type="email" class="form-control" placeholder="Enter your email" aria-label="Username" aria-describedby="addon-wrapping">
+                              </div>
+                              <button type="button" class="add-name btn btn-success">Edit email</button>
+                              <label for="age" class="mt-5 text-light">Age: 22</label>
+                              <div class="input-group flex-nowrap">
+                                <div class="input-group-prepend">
+                                </div>
+                                <input type="number" class="form-control" placeholder="Select your age" aria-label="Username" aria-describedby="addon-wrapping">
+                              </div>
+                              <button type="button" class="mt-2 add-password btn btn-success">Edit age</button>
+                            </div>
+                          </div>   
+                </div>
                        </div>
 
                        <div class="row">
